# azn-rates-tg-channel

./: .env.sample  .gitignore  Dockerfile  bot.py  cbar.py  config.py  config.toml  crontab  docker-compose.yml  main.py  pyproject.toml  requirements.txt
azn_rates/: bot.py  cbar.py  config.py
azn_rates_tg_channel/: bot.py  cbar.py  cbar2.py  main.py
tests/: __init__.py
