[tool.poetry]
name = "aznrateschannel"
version = "0.1.0"
description = ""
authors = ["Tahir Jalilov <tahir.jalilov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.08"
requests = "^2.26.0"
python-dotenv = "^0.19.2"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"